# knowledge-isle

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/integration_tests/: test_postgres_auth.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260723_0001_create_auth_tables.py  20260723_0002_create_knowledge_bases.py  20260723_0003_create_documents.py  20260723_0004_create_chat_tables.py  20260724_0005_add_document_chunks.py  20260724_0006_add_chunk_embeddings.py  20260724_0007_add_embedding_index.py
apps/api/src/knowledge_isle_api/: __init__.py  main.py
apps/api/src/knowledge_isle_api/api/: dependencies.py  router.py
apps/api/src/knowledge_isle_api/api/routes/: auth.py  chat.py  dashboard.py  documents.py  health.py  knowledge_bases.py
apps/api/src/knowledge_isle_api/core/: config.py  observability.py  security.py
apps/api/src/knowledge_isle_api/db/: session.py  types.py
apps/api/src/knowledge_isle_api/models/: __init__.py  citation.py  conversation.py  document.py  document_chunk.py  knowledge_base.py  message.py  session.py  user.py
apps/api/src/knowledge_isle_api/schemas/: auth.py  base.py  chat.py  document.py  knowledge_base.py
apps/api/src/knowledge_isle_api/services/: ai_provider.py  auth.py  chat.py  chunking.py  documents.py  embeddings.py  evaluation.py  knowledge_bases.py  retrieval.py  storage.py  task_queue.py
apps/api/tests/: conftest.py  test_auth.py  test_chat.py  test_chunking.py  test_documents.py  test_embeddings.py  test_evaluation.py  test_health.py  test_knowledge_bases.py
apps/dev-agent/: pyproject.toml
apps/dev-agent/src/knowledge_isle_dev_agent/: __init__.py  __main__.py  app.py  commands.py  config.py  database.py  github.py  planner.py  planner_schema.json  runner.py
apps/dev-agent/tests/: test_app.py  test_database.py  test_github.py  test_planner.py  test_runner.py
apps/web/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: main.ts
apps/web/src/api/: http.ts
apps/web/src/components/: AuthLayout.vue  CreateKnowledgeBaseDialog.vue  (+1 more)
apps/worker/: pyproject.toml
apps/worker/src/knowledge_isle_worker/: __init__.py  celery_app.py  tasks.py
apps/worker/tests/: test_tasks.py
docs/: DEV_AGENT.md  LEARNING.md  MVP.md
evals/: retrieval.jsonl
scripts/: evaluate_retrieval.py
scripts/dev-agent/: install-task.ps1  serve.ps1  start.ps1  uninstall-task.ps1
(+17 files in other folders)
