[project]
name = "knowledge-isle-api"
version = "0.1.0"
description = "Knowledge Isle FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4,<2.0",
    "argon2-cffi>=25.1.0,<26.0",
    "asyncpg>=0.30.0,<1.0",
    "email-validator>=2.2.0,<3.0",
    "fastapi>=0.116.1,<1.0",
    "pydantic-settings>=2.10.1,<3.0",
    "sqlalchemy[asyncio]>=2.0.41,<3.0",
    "uvicorn[standard]>=0.35.0,<1.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0,<1.0",
    "httpx>=0.28.1,<1.0",
    "mypy>=1.17.0,<2.0",
    "pytest>=8.4.1,<9.0",
    "pytest-asyncio>=1.1.0,<2.0",
    "ruff>=0.12.7,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_isle_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=../../.test-tmp"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["knowledge_isle_api"]
