[project]
name = "knowledge-isle-dev-agent"
version = "0.1.0"
description = "Local Windows development agent for Knowledge Isle"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1,<1.0",
    "uvicorn[standard]>=0.35.0,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1.0",
    "pytest>=8.4.1,<9.0",
    "ruff>=0.12.7,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_isle_dev_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/knowledge_isle_dev_agent/app.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "--basetemp=../../.test-tmp/dev-agent"
