[project]
name = "knowledge-isle-worker"
version = "0.1.0"
description = "Knowledge Isle Celery worker"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3,<6.0",
    "pydantic-settings>=2.10.1,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9.0",
    "ruff>=0.12.7,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_isle_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
